--- a/opdracht 7.1 functions/opdracht 7.1/index.html
+++ b/opdracht 7.1 functions/opdracht 7.1/index.html
@@ -7,6 +7,6 @@
     <title>Opdracht 7.1</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
