--- a/opdracht 9.2/index.html
+++ b/opdracht 9.2/index.html
@@ -2,20 +2,17 @@
 <html lang="en">
 
 <head>
+    <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extra opdracht</title>
+    <title>Opdracht 9.2</title>
 </head>
 
 <body>
     <div class="emoji closed active">🙈</div>
     <div class="emoji open">🙉</div>
-
-
-
-    <script defer src="app.js"></script>
 </body>
 
 </html>
